[package]
name = "windows-crate-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
chrono = "0.4.31"
state = "0.6.0"
thiserror = "1.0.50"
windows = {version = "0.51.1", features = ["Win32_Foundation", "Win32_System_Com", "Win32_NetworkManagement", "Win32_NetworkManagement_WiFi"]}
